# agent-studio

./: .gitignore  AGENT.md  CLAUDE.md  agent.json  bugs.md  data-sources.json  db-design.md  e2e_test.py  index.html  instance.json  ladle.model.json  ladle_001.json  ladle_dispatcher.instance.json  ladle_dispatcher.model.json  model.json  package-lock.json  package.json  prd.md  pyproject.toml  todo.md  tsconfig.json  ui.pen  vite.config.ts  vitest.setup.ts
.claude/: settings.json  settings.local.json
backup/: ladle-dispatcher-agent-prd-alignment.md  ladle.instance.json
designs/: agent-studio-ui.pen
diagrams/: agent-studio-architecture.arch.json  agent-studio-architecture.drawio  agent-studio-architecture.spec.yaml  agent-studio-runtime.arch.json  agent-studio-runtime.drawio  agent-studio-runtime.spec.yaml  agent-studio.drawio
docs/: agent-studio-architecture-diagram.html  agent-studio-runtime-architecture.html  code-review-message-hub-refactor.md
docs/designs/: pencil-new.pen
openapi/: .temp_check  alarms.json  events.json  instances.json  models.json  services.json  state-machine.json  variables.json
projects/sim-factory-01/: project.yaml
projects/steel-plant-01/: project.yaml
schema/: agent-instance-v2.schema.json  agent-model-v2.schema.json
scripts/: validate_agent_instance.py  validate_agent_model.py
src/: main.tsx
src/agent_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/app/: App.test.tsx  App.tsx  router.test.tsx  router.tsx  smoke.test.tsx
src/cli/: main.py
src/runtime/: agent_namespace.py  alarm_manager.py  event_bus.py  inbox_processor.py  instance.py  instance_loader.py  instance_manager.py  message_hub.py  messaging.py  metric_store.py  model_loader.py  model_resolver.py  (+10 more)
tests/: conftest.py
(+311 files in other folders)
